<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_privacy_policy_main"
        android:icon="@drawable/ic_privacy_policy"
        android:title="@string/privacy_policy" />
    <item
        android:id="@+id/nav_settings_main"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_feedback_main"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback" />
    <item
        android:id="@+id/nav_rate_us_main"
        android:icon="@drawable/ic_rate_us"
        android:title="@string/rate_us" />
    <item
        android:id="@+id/nav_about_main"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />
</menu>